# tclreadline

./: .gitignore  ChangeLog  Makefile.in  README.md  Vagrantfile  aclocal.m4  append_init_scripts.tcl  config.h.in  configure  configure.ac  meson.build  meson.options  pkgIndex.tcl.in  provision-vagrant-vm.sh  tclreadline.c  tclreadline.n.in  tclreadlineSetup.tcl  tclreadlineUuid.h.in
.github/workflows/: linux-ci.yml  mac-ci.yml
doc/: meson.build  tclreadline.n.in
generic/: config.h.in  shrl.c  tclreadline.c  tclreadline.h  tclreadline.h.in  tclreadlineBuildInfo.c  tclshrl.c  wishrl.c
tests/: all.tcl  build-info.test  general.test
tools/: append_init_scripts.tcl  embed_objcopy.py  to_char_array_literal.tcl
